# lanelet2_generator

./: .gitignore  CMakeLists.txt  FSD.md  README.md  package.xml  pyproject.toml  requirements.txt
docker/: Dockerfile  lanelet2_generator.sh  merge_lanelets.sh  pointcloud_converter.sh
lanelet2_generator/: __init__.py  cli.py  las_mgrs_cli.py  merge_lanelets_cli.py  mgrs_utils.py  osm_merge.py
lanelet2_generator/filtering/: __init__.py  path.py
lanelet2_generator/geometry/: __init__.py  path.py
lanelet2_generator/lanelet/: __init__.py  builder.py
lanelet2_generator/readers/: __init__.py  bag.py  base.py  csv.py  ply.py  yaml_waypoints.py
lanelet2_generator_node/: __init__.py  route_to_lanelet_node.py
launch/: route_to_lanelet.launch.xml
